# field_watcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  database.db-shm  database.db-wal  docker-compose.yaml  field-watcher.py  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
FieldWatcher/: Config.py  DB.py  Objects.py  Sniffer.py  __init__.py
grafana-dashboards/: connections.json
legacy/: config.example.yaml
legacy/FieldWatcher/: Backend.py  DB.py  Sniffer.py  Utils.py
src/: database.rs  main.rs  sniffer.rs
src/cli/: mod.rs
src/config/: mod.rs
src/domain/: models.rs
src/network/: api.rs  mod.rs  protocols.rs  sniffer.rs
src/storage/: database.rs
