[package]
name = "field_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
etherparse = "0.19.0"
mac_oui = { version = "0.4.11", features = ["with-db"] }
pcap = "2.4.0"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
