[package]
name = "field_watcher"
version = "2.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
comfy-table = "7.2.2"
dashmap = "6.1.0"
etherparse = "0.19.0"
mac_oui = { version = "0.4.11", features = ["with-db"] }
pcap = "2.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
